--- a/package.json
+++ b/package.json
@@ -5,8 +5,23 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@inertiajs/vue3": "^1.0.0",
+        "@mdi/font": "^7.1.96",
+        "@tailwindcss/forms": "^0.5.3",
+        "@vitejs/plugin-vue": "^4.0.0",
+        "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0"
+        "postcss": "^8.4.18",
+        "tailwindcss": "^3.2.1",
+        "vite": "^4.0.0",
+        "vue": "^3.2.41",
+        "vue-loader": "^17.0.1"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.0.0",
+        "vite-plugin-vuetify": "^1.0.2",
+        "vue": "^3.2.36",
+        "vuetify": "^3.1.4"
     }
 }
